updated works controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
   </head>
 
   <body>
+
+    <section class="flash-msg__section">
+      <% flash.each do |name, message| %>
+        <strong class="<%= name %>">
+          <%= message %>
+        </strong>
+      <% end %>
+    </section>
+
     <%= yield %>
   </body>
 </html>
