--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
 
   <body>
 
+      <%=link_to "Home", root_path%>
+      <%=link_to "Works", works_path%>
+      <%=link_to "Users", users_path%>
+
       <section class="flash-msg__section">
       <% flash.each do |name, message| %>
         <strong class="<%= name %>">
