--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <% @work.errors.each do |column, message| %>
       <li>
-        <strong><%= column.capitalize %></strong> field <%= message %>
+        <strong><%= column %></strong>: <%= message %>
       </li>
     <% end %>
   </ul>
