--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -6,3 +6,4 @@
 
 <%= link_to "Edit", edit_work_path%>
 <%= link_to "Delete", work_path(@work), method: :delete , data: {confirm: "Are you sure?"}%>
+<%= link_to "Upvote", upvote_path(work.id), method: :post %>
