--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,3 +1,17 @@
+<% if @invalid_vote_message %>
+  <ul>
+    <% @invalid_vote_message.each do |column, message| %>
+      <li>
+        <strong><%= column %></strong>: <%= message.first %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+
+
+
+
+
 <h2><%= @work.title %> </h2>
 
 <p>Created by: <%= @work.creator %></p>
