--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -17,3 +17,13 @@
 <%= link_to "Edit", edit_work_path%>
 <%= link_to "Delete", work_path(@work), method: :delete , data: {confirm: "Are you sure?"}%>
 <%= link_to "Upvote", upvote_path(@work.id), method: :post %>
+
+
+<h2> <%= @work.votes.length%> Votes for this <%= @work.category.capitalize%> </h2>
+
+<% vote_collection = @work.votes%>
+
+<% vote_collection.each do |vote| %>
+  <% voter = User.find_by(id: vote.user_id) %>
+  <p> <%= link_to "#{voter.name}", user_path(voter.id) %>, <%= vote.created_at %></p>
+<% end %>
