--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -8,24 +8,40 @@
   </ul>
 <% end %>
 
-<h2>Create New Work</h2>
+<main>
+  <h2>Add a new work</h2>
 
-<%= form_with model: @work do |f| %>
+  <%= form_with model: @work do |f| %>
 
-  <%= f.label :category %>
-      <%= f.select :category, ['album', 'book', 'movie'] %>
+    <div class="form-group">
+        <%= f.label :category %>
+        <%= f.select :category, ['album', 'book', 'movie'], class: "form-control" %>
+    </div>
 
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+    <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: "form-control" %>
+    </div>
 
-  <%= f.label :creator %>
-  <%= f.text_field :creator %>
+    <div class="form-group">
+        <%= f.label :creator %>
+        <%= f.text_field :creator, class: "form-control" %>
+    </div>
 
-  <%= f.label :publication_year %>
-  <%= f.text_field :publication_year %>
+    <div class="form-group">
+        <%= f.label :publication_year %>
+        <%= f.text_field :publication_year, class: "form-control" %>
 
-  <%= f.label :description %>
-  <%= f.text_field :description %>
+    </div>
 
-  <%= f.submit "Create Work"%>
-<% end %>
+    <div class="form-group">
+        <%= f.label :description %>
+        <%= f.text_area :description, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= f.submit "Create Work", class: "btn btn-primary" %>
+    </div>
+    
+  <% end %>
+</main>
