--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,23 @@
 <h2>List of users</h2>
 
+<table class="table">
+  <thead>
+    <tr>
+      <th>Username</th>
+      <th>Votes</th>
+      <th>Joined</th>
+    </tr>
+  </thead>
 
-<ul>
-  <% @users.each do |user|  %>
-    <li>
-      <p><%= link_to "#{user.name}", user_path(user.id)%>, Joined <%= user.created_at %></p>
-    </li>
-  <% end %>
-</ul>
+  <tbody>
+    <% @users.each do |user|  %>
+      <tr>
+        <td><%= link_to "#{user.name}", user_path(user.id)%></td>
+        <td><%= user.votes.count %></td>
+        <td><%= user.created_at %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<a class="btn btn-secondary" href="/">Back to Media List</a>
