--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,16 +1,41 @@
  <% if @user.errors.any? %>
-  <ul>
-    <% @user.errors.each do |column, message| %>
-      <li>
-        <strong><%= column %></strong>: <%= message %>
-      </li>
-    <% end %>
-  </ul>
+ <div> 
+    <ul>
+      <% @user.errors.each do |column, message| %>
+        <li>
+          <strong><%= column %></strong>: <%= message %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 
- <%= form_with model: @user, class: 'login__form', url: login_path do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
 
-  <%= f.submit "Log In" %>
+<h2>Log In</h2>
+
+<%= form_with model: @user, url: login_path do |f| %>
+
+  <div class="form-group"> 
+    <%= f.label :name %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="form-group"> 
+    <%= f.submit "Log In", class: "btn btn-primary" %>
+  </div >
 <% end %>
+
+<article>
+  <h4>A note about logging in</h4>
+  <p>
+    There is no password field. In fact, there is no indication whatsoever
+    that you are who you say you are. There's nothing special about users -
+    username is just another piece of data that the user entered and we have to keep
+    track of.
+  </p>
+
+  <p>
+    We'll learn more about security and authentication in the next couple weeks.
+    For now, don't worry about it beyond what you can see here.
+  </p>
+</article>
