--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -1,47 +1,48 @@
-<% if @work.errors.any? %>
-  <ul>
-    <% @work.errors.each do |column, message| %>
-      <li>
-        <strong><%= column %></strong>: <%= message %>
-      </li>
-    <% end %>
-  </ul>
+ <% if @work.errors.any? %>
+ <div> 
+    <ul>
+      <% @work.errors.each do |column, message| %>
+        <li>
+          <strong><%= column %></strong>: <%= message %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 
-<main>
-  <h2>Edit This <%=@work.category.capitalize%></h2>
 
-  <%= form_with model: @work do |f| %>
+<h2>Edit This <%=@work.category.capitalize%></h2>
 
-    <div class="form-group">
-        <%= f.label :category %>
-        <%= f.select :category, ['album', 'book', 'movie'], class: "form-control" %>
-    </div>
+<%= form_with model: @work do |f| %>
 
-    <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
-    </div>
+  <div class="form-group">
+      <%= f.label :category %>
+      <%= f.select :category, ['album', 'book', 'movie'], class: "form-control" %>
+  </div>
 
-    <div class="form-group">
-        <%= f.label :creator %>
-        <%= f.text_field :creator, class: "form-control" %>
-    </div>
+  <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: "form-control" %>
+  </div>
 
-    <div class="form-group">
-        <%= f.label :publication_year %>
-        <%= f.text_field :publication_year, class: "form-control" %>
+  <div class="form-group">
+      <%= f.label :creator %>
+      <%= f.text_field :creator, class: "form-control" %>
+  </div>
 
-    </div>
+  <div class="form-group">
+      <%= f.label :publication_year %>
+      <%= f.text_field :publication_year, class: "form-control" %>
 
-    <div class="form-group">
-        <%= f.label :description %>
-        <%= f.text_area :description, class: "form-control" %>
-    </div>
+  </div>
 
-    <div class="form-group">
-      <%= f.submit "Update Work", class: "btn btn-primary" %>
-    </div>
-    
-  <% end %>
-</main>
+  <div class="form-group">
+      <%= f.label :description %>
+      <%= f.text_area :description, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit "Update Work", class: "btn btn-primary" %>
+  </div>
+  
+<% end %>
