--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -1,4 +1,5 @@
 <% if @work.errors.any? %>
+<div> 
   <ul>
     <% @work.errors.each do |column, message| %>
       <li>
@@ -6,42 +7,43 @@
       </li>
     <% end %>
   </ul>
+</div>
 <% end %>
 
-<main>
-  <h2>Add a new work</h2>
 
-  <%= form_with model: @work do |f| %>
+<h2>Add a new work</h2>
 
-    <div class="form-group">
-        <%= f.label :category %>
-        <%= f.select :category, ['album', 'book', 'movie'], class: "form-control" %>
-    </div>
+<%= form_with model: @work do |f| %>
 
-    <div class="form-group">
-        <%= f.label :title %>
-        <%= f.text_field :title, class: "form-control" %>
-    </div>
+  <div class="form-group">
+      <%= f.label :category %>
+      <%= f.select :category, ['album', 'book', 'movie'], class: "form-control" %>
+  </div>
 
-    <div class="form-group">
-        <%= f.label :creator %>
-        <%= f.text_field :creator, class: "form-control" %>
-    </div>
+  <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: "form-control" %>
+  </div>
 
-    <div class="form-group">
-        <%= f.label :publication_year %>
-        <%= f.text_field :publication_year, class: "form-control" %>
+  <div class="form-group">
+      <%= f.label :creator %>
+      <%= f.text_field :creator, class: "form-control" %>
+  </div>
 
-    </div>
+  <div class="form-group">
+      <%= f.label :publication_year %>
+      <%= f.text_field :publication_year, class: "form-control" %>
 
-    <div class="form-group">
-        <%= f.label :description %>
-        <%= f.text_area :description, class: "form-control" %>
-    </div>
+  </div>
 
-    <div class="form-group">
-      <%= f.submit "Create Work", class: "btn btn-primary" %>
-    </div>
-    
-  <% end %>
-</main>
+  <div class="form-group">
+      <%= f.label :description %>
+      <%= f.text_area :description, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.submit "Create Work", class: "btn btn-primary" %>
+  </div>
+  
+<% end %>
+
