styled work index view

--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -1,13 +1,30 @@
 <h2>List of Works</h2>
 
-<button>
-  <%= link_to "Add Work", new_work_path %>
-</button>
+<h4> Works </h4>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Votes</th>
+      <th>Title</th>
+      <th>Created By</th>
+      <th>Published</th>
+      <th>Upvote</th>
+    </tr>
+  </thead>
 
-<ul>
-  <% @works.each do |work|  %>
-    <li>
-      <p><%= work.category%>, <%= link_to "#{work.title}", work_path(work.id)%>, <%= work.creator%>, <%= work.publication_year%>, <%= work.description%>  </p>
-    </li>
-  <% end %>
-</ul>
+  <tbody>
+    <% @works.each do |work|  %>
+      <tr>
+        <td><%= work.votes.count%></td>
+        <td><%= link_to "#{work.title}", work_path(work.id)%></td>
+        <td><%= work.creator%></td>
+        <td> <%= work.publication_year%></td>
+        <td><%= link_to "Upvote", upvote_path(work.id), method: :post, class: "btn btn-primary"%></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+<a class="btn btn-secondary" href="/">View top media</a>
+<a class="btn btn-primary" href="/works/new">Add a new work</a>
