styled user show view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -162,3 +162,11 @@ p {
 .works-votes__header {
   color: black;
 }
+
+.user-votes__container {
+  margin-top: 2rem;
+}
+
+.user-votes__header {
+  color: black;
+}
