refactored main page view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -196,3 +196,38 @@ p {
 .spotlight__link-to {
   border-bottom: 2px solid;
 }
+
+.top-ten__header {
+  color: #26A69A;
+  border-bottom: 2px solid;
+      border-bottom-color: currentcolor;
+  border-bottom-color: #B2DFDB;
+}
+
+.top-ten__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 2em;
+}
+
+.list-group {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+
+.top-ten__list {
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.list-group-item {
+  border: none;
+}
+
+.top-ten__creator {
+  color: slategrey;
+}
+
