--- a/app/views/works/main.html.erb
+++ b/app/views/works/main.html.erb
@@ -10,8 +10,65 @@
 
 <hr class="root__hr" />
 
-<% albums = Work.sort_works("album")%>
+<section class="top-ten__container">
+  <% albums = Work.sort_works("album")%>
+  <% books = Work.sort_works("book")%>
+  <% movies = Work.sort_works("movie")%>
 
-<%= albums.first.title%>
+  <section class="top-ten__list-container">
+    <h2 class="top-ten__header"> Top Albums </h2>
+    <% if albums.instance_of? String %>
+      <p><%= albums %></p>
+    <% else %>
+      <ul class="list-group top-ten__list">
+        <% albums[0..9].each do |album|%>
+          <li class="list-group-item">
+            <h4>
+              <%=link_to "#{album.title}", work_path(album.id)%> 
+              <small > by <%=album.creator%></small>
+            </h4>
+            <p><%=album.votes.length%> votes</p>
+          <li>
+        <% end %>
+      </ul>
+    <% end %>
+  </section>
 
-<%= albums.last.title%>
+  <section class="top-ten__list-container">
+    <h2 class="top-ten__header"> Top Books </h2>
+    <% if books.instance_of? String %>
+      <p><%= books %></p>
+    <% else %>
+      <ul class="list-group top-ten__list">
+        <% books[0..9].each do |book|%>
+          <li class="list-group-item">
+            <h4>
+              <%=link_to "#{book.title}", work_path(book.id)%> 
+              <small > by <%=book.creator%></small>
+            </h4>
+            <p><%=book.votes.length%> votes</p>
+          <li>
+        <% end %>
+      </ul>
+    <% end %>
+  </section>
+
+  <section class="top-ten__list-container">
+    <h2 class="top-ten__header"> Top Movies </h2>
+    <% if movies.instance_of? String %>
+      <p><%= movies %></p>
+    <% else %>
+      <ul class="list-group top-ten__list">
+        <% movies[0..9].each do |movie|%>
+          <li class="list-group-item">
+            <h4>
+              <%=link_to "#{movie.title}", work_path(movie.id)%> 
+              <small > by <%=movie.creator%></small>
+            </h4>
+            <p><%=movie.votes.length%> votes</p>
+          <li>
+        <% end %>
+      </ul>
+    <% end %>
+  </section>
+</section>
