added error handling for spotlight

--- a/app/views/works/main.html.erb
+++ b/app/views/works/main.html.erb
@@ -1,11 +1,20 @@
 <section class="spotlight">
-  <h2 class="spotlight__header">
-    <span class="spotlight__header--prefix"> Media Spotlight: </span>
-     <%= link_to "#{Work.spotlight.title}", work_path(Work.spotlight.id), class: "spotlight__link-to" %> by <%= Work.spotlight.creator%>
-  </h2>
-  <p class="spotlight__description"> 
-     <%= Work.spotlight.votes.length%> votes - <%= Work.spotlight.description%>
-  </p>
+  <%if Work.spotlight.instance_of? String%>
+    <h2 class="spotlight__header">
+      <% media_error = Work.spotlight %>
+      <span> <%= media_error%> </span>
+    </h2>
+  <% else %>
+    <h2 class="spotlight__header">
+      <span class="spotlight__header--prefix"> Media Spotlight: </span>
+
+      <%= link_to "#{Work.spotlight.title}", work_path(Work.spotlight.id), class: "spotlight__link-to" %> by <%= Work.spotlight.creator%>
+    </h2>
+    <p class="spotlight__description"> 
+      <%= Work.spotlight.votes.length%> votes - <%= Work.spotlight.description%>
+    </p>
+
+  <% end %>
 </section>
 
 <hr class="root__hr" />
