--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<main>
 <h2>User Summary: <%= @user.name %> </h2>
 
 <p>Joined site <%= @user.created_at %></p>
@@ -35,5 +36,7 @@
 
 <a class="btn btn-secondary" href="/users">See all Users</a>
 <a class="btn btn-primary" href="/">Back to Media List</a>
+</main>
+
 
 
