--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -1,3 +1,4 @@
+<main>
 <h2>List of Works</h2>
 
 <h4>Albums</h4>
@@ -92,3 +93,4 @@
 
 <a class="btn btn-secondary" href="/">View top media</a>
 <a class="btn btn-primary" href="/works/new">Add a new work</a>
+</main>
