--- a/app/views/works/main.html.erb
+++ b/app/views/works/main.html.erb
@@ -1,3 +1,4 @@
+<main>
 <section class="spotlight">
   <%if Work.spotlight.instance_of? String%>
     <h2 class="spotlight__header">
@@ -79,3 +80,4 @@
     <% end %>
   </section>
 </section>
+</main>
