--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<main>
 <h2>List of Users</h2>
 
 <table class="table">
@@ -21,3 +22,4 @@
 </table>
 
 <a class="btn btn-secondary" href="/">Back to Media List</a>
+</main>
