--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,5 +1,5 @@
  <% if @user.errors.any? %>
- <div> 
+ <div class = "error-reason"> 
     <ul>
       <% @user.errors.each do |column, message| %>
         <li>
@@ -10,32 +10,33 @@
   </div>
 <% end %>
 
+<main>
+  <h2>Log In</h2>
 
-<h2>Log In</h2>
+  <%= form_with model: @user, url: login_path do |f| %>
 
-<%= form_with model: @user, url: login_path do |f| %>
+    <div class="form-group"> 
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
 
-  <div class="form-group"> 
-    <%= f.label :name %>
-    <%= f.text_field :name, class: "form-control" %>
-  </div>
+    <div class="form-group"> 
+      <%= f.submit "Log In", class: "btn btn-primary" %>
+    </div >
+  <% end %>
 
-  <div class="form-group"> 
-    <%= f.submit "Log In", class: "btn btn-primary" %>
-  </div >
-<% end %>
+  <article>
+    <h4>A note about logging in</h4>
+    <p>
+      There is no password field. In fact, there is no indication whatsoever
+      that you are who you say you are. There's nothing special about users -
+      username is just another piece of data that the user entered and we have to keep
+      track of.
+    </p>
 
-<article>
-  <h4>A note about logging in</h4>
-  <p>
-    There is no password field. In fact, there is no indication whatsoever
-    that you are who you say you are. There's nothing special about users -
-    username is just another piece of data that the user entered and we have to keep
-    track of.
-  </p>
-
-  <p>
-    We'll learn more about security and authentication in the next couple weeks.
-    For now, don't worry about it beyond what you can see here.
-  </p>
-</article>
+    <p>
+      We'll learn more about security and authentication in the next couple weeks.
+      For now, don't worry about it beyond what you can see here.
+    </p>
+  </article>
+</main>
