--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -1,5 +1,5 @@
 <% if @work.errors.any? %>
-<div> 
+<div class = "error-reason"> 
   <ul>
     <% @work.errors.each do |column, message| %>
       <li>
@@ -10,7 +10,7 @@
 </div>
 <% end %>
 
-
+<main>
 <h2>Add a new work</h2>
 
 <%= form_with model: @work do |f| %>
@@ -46,4 +46,6 @@
   </div>
   
 <% end %>
+</main>
+
 
