--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,4 +1,5 @@
 <% if @invalid_vote_message %>
+  <div class="error-reason">
   <ul>
     <% @invalid_vote_message.each do |column, message| %>
       <li>
@@ -6,8 +7,10 @@
       </li>
     <% end %>
   </ul>
+  </div>
 <% end %>
 
+<main>
 <section>
   <h2><%= @work.title %> </h2>
 
@@ -49,3 +52,5 @@
   </table>
 
 </section>
+</main>
+
