--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <main>
 <h2>User Summary: <%= @user.name %> </h2>
 
-<p>Joined site <%= @user.created_at %></p>
+<p>Joined site <%= readable_date(@user.created_at) %></p>
 
 <section class="user-votes__container">
   <h3 class="user-votes__header">Votes</h3>
@@ -28,7 +28,7 @@
         <td><%= work.creator %></td>
         <td><%= work.publication_year %></td>
         <td><%= work.category %></td>
-        <td><%= vote.created_at %></td>
+        <td><%= readable_date(vote.created_at) %></td>
       </tr>
     <% end %>
   </tbody>
