--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -1,9 +1,9 @@
 <% if @work.errors.any? %>
 <div class = "error-reason"> 
-  <ul>
+  <ul class ="error-reason-message">
     <% @work.errors.each do |column, message| %>
       <li>
-        <strong><%= column %></strong>: <%= message %>
+        <%= column %>: <%= message %>
       </li>
     <% end %>
   </ul>
