--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,14 +17,27 @@
 
 @import "**/*";
 
-// Body 
-// * {
-//   border: 1px solid black;
-// }
+// Typography
+body, h1, h2, h3, h4, h5 {
+  font-family: "Gudea", sans-serif;
+}
 
+a, h2, h3 {
+  color: #26A69A;
+}
+
+h1, h2, h3, h4, h5 {
+  font-weight: bold;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+// Body
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -33,10 +46,7 @@ body {
   background-color: #fff;
 }
 
-body, h1, h2, h3, h4, h5 {
-  font-family: "Gudea", sans-serif;
-}
-
+// Main
 main {
   padding: 2rem;
 }
@@ -65,7 +75,7 @@ main {
   color: white;
 }
 
-// Header - nav
+// Header - Navbar
 .app-header__nav {
   display: flex;
   flex-direction: row;
@@ -92,38 +102,10 @@ main {
   margin-left: 2rem;
 }
 
-.btn-primary {
-  background-color: #26A69A;
-  color: white;
-  border-color: #26A69A;
-}
-
-.btn-secondary {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
-}
-
-// Typography
-a, h2, h3 {
-  color: #26A69A;
-}
-
-
-h1, h2, h3, h4, h5 {
-  font-weight: bold;
-}
-
-p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-// Flash Message
-
+// Flash Messages
 .success {
   margin-top: 1rem;
   margin-bottom: .5rem;
-  //height: 100%;
   width: 100%;
   display:inline-block;
   color: #155724;
@@ -138,7 +120,6 @@ p {
 
 .error {
   margin-top: 1rem;
-  //height: 100%;
   width: 100%;
   display:inline-block;
   color: #856404;
@@ -163,8 +144,32 @@ p {
   margin-left: 2rem;
 }
 
-// Table
+// Forms
+label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
 
+.form-group {
+  margin-bottom: 1rem;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+// Tables
 .table {
   width: 100%;
   margin-bottom: 1rem;
@@ -192,6 +197,7 @@ p {
   color: black;
 }
 
+// Homepage
 .spotlight {
   padding: 0 2rem 2rem 2rem;
 }
@@ -251,3 +257,15 @@ p {
   color: slategrey;
 }
 
+// Buttons 
+.btn-primary {
+  background-color: #26A69A;
+  color: white;
+  border-color: #26A69A;
+}
+
+.btn-secondary {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
